# GenericAppServer

./: .gitignore  CMakeLists.txt  CONSTANTS.h  CONSTANTS.hpp  Communicator.cpp  Communicator.h  Communicator.hpp  IDatabase.h  IDatabase.hpp  IRequestHandler.h  IRequestHandler.hpp  JsonDeserializer.cpp  JsonDeserializer.h  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.h  JsonSerializer.hpp  LoggedUser.h  LoginRequestHandler.cpp  LoginRequestHandler.h  LoginRequestHandler.hpp  Requests.h  Requests.hpp  Server.cpp  Server.h  Server.hpp  SqliteDatabase.cpp  SqliteDatabase.h  SqliteDatabase.hpp  SqliteStatements.h  SqliteStatements.hpp  Timer.h  main.cpp  responses.hpp  results.h  results.hpp
